[package]
name = "libparted-sys-slim"
version = "0.4.0"
authors = ["Aaron Dewes <aaron@nirvati.de>"]
license = "MIT"
description = "libparted bindings"
documentation = "https://docs.rs/libparted-sys-slim"
homepage = "https://github.com/nirvati/libparted-sys-slim"
keywords = ["parted", "libparted"]
edition = "2024"


[build-dependencies]
bindgen = "0.72.1"

[dependencies]

